update index and stylesheet files

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Microverse-Student-Project-1</title>
 </head>
-<body>
-    
+
+<body class="body">
+
+  <div class="navbar">
+      <div class="my-logo">My Logo</div>
+      <div class="menu-icon"></div>
+  </div>
+
+
+
+
 </body>
 </html>
