update stylesheet css file and insdex file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a class="my-logo">My Logo</a>
         <a class="menu-icon"></a>
       </nav>
+    </header>
 
 
     <div class="main">
