update index file

--- a/index.html
+++ b/index.html
@@ -38,5 +38,20 @@
     </div>
   </section>
 
+  <section class="projects">
+    <div class="project1">
+
+    </div>
+    <div class="project2">
+
+    </div>
+    <div class="project3">
+
+    </div>
+    <div class="project4">
+
+    </div>
+  </section>
+
 </body>
 </html>
