update html and css finishing cards

--- a/index.html
+++ b/index.html
@@ -69,12 +69,14 @@
     <div class="project" id="project2">
       <div class="pimage"></div>
       <div class="p-title">
-        <h2>Tonic</h2>
+        <h2>Multi-Post Stories</h2>
       </div>
       <div class="projectdetails">
         <ul class="details-list">
           <li class="client">CANOPY</li>
+          <li class="spacedot"></li>
           <li class="role">Back End Dev</li>
+          <li class="spacedot"></li>
           <li class="year">2015</li>
         </ul>
       </div>
@@ -99,7 +101,9 @@
       <div class="projectdetails">
         <ul class="details-list">
           <li class="client">CANOPY</li>
+          <li class="spacedot"></li>
           <li class="role">Back End Dev</li>
+          <li class="spacedot"></li>
           <li class="year">2015</li>
         </ul>
       </div>
@@ -119,12 +123,14 @@
     <div class="project" id="project4">
       <div class="pimage"></div>
       <div class="p-title">
-        <h2>Tonic</h2>
+        <h2>Multi-Post Stories</h2>
       </div>
       <div class="projectdetails">
         <ul class="details-list">
           <li class="client">CANOPY</li>
+          <li class="spacedot"></li>
           <li class="role">Back End Dev</li>
+          <li class="spacedot"></li>
           <li class="year">2015</li>
         </ul>
       </div>
