--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 
     <div class="main">
       <div class="primary-text-container">
-        <h3 class="primary-text">I'm Juan Diaz Glad to see you!</h3>
+        <h1 class="primary-text">I'm Juan Diaz Glad to see you!</h1>
       </div>
       <div class="secondary-text">
-        <p>I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p></div>
+        <p>I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+      </div>
       <div class="connect-text">LET'S CONNECT</div>
       <div class="socialmedia-icons">
         <ul>
@@ -147,6 +148,80 @@
       <div class="project-access">See project</div>
     </div>  
   </section>
+
+  <section class="about-me">
+    <div class="primary-text-container">
+      <h1 class="primary-text">About<br>Myself</h1>
+    </div>
+    <div class="secondary-text">
+      <p>I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+    </div>
+    <div class="connect-text">LET'S CONNECT</div>
+    <div class="socialmedia-icons">
+      <ul>
+        <li class="twitter-icon"><a href=""></a></li>
+        <li class="linkedin-icon"><a href=""></a></li>
+        <li class="m-icon"><a href=""></a></li>
+        <li class="cat-icon"><a href=""></a></li>
+        <li class="fingers-icon"><a href=""></a></li>
+      </ul>
+    </div>
+    <div class="resume-access">Get my Resume</div>
+    <div>
+      <ul class="categories-info">
+        <li class="categorie" id="cat1">
+          <div class="categorie-name">
+            <h4>Languajes</h4>
+          </div>
+          <div class="arrow-img"></div>
+        </li>
+        <li class="subcategorie" id="subcat1">
+          <div class="subcat-logo"></div>
+          <div class="subcategorie-name">
+            <h4>JavaScript</h4>
+          </div>
+        </li>
+        <li class="subcategorie" id="subcat2">
+          <div class="subcat-logo"></div>
+          <div class="subcategorie-name">
+            <h4>HTML</h4>
+          </div>
+        </li>
+        <li class="subcategorie" id="subcat3">
+          <div class="subcat-logo"></div>
+          <div class="subcategorie-name">
+            <h4>CSS</h4>
+          </div>
+          <li class="categorie" id="cat2">
+            <div class="categorie-name">
+              <h4>Frameworks</h4>
+            </div>
+            <div class="arrow-img"></div>
+          </li>
+          <li class="separator-line">
+            <div class="line"></div>
+          </li>
+          <li class="categorie" id="cat3">
+            <div class="categorie-name">
+              <h4>Skills</h4>
+            </div>
+            <div class="arrow-img"></div>
+          </li>
+          <li class="separator-line">
+            <div class="line"></div>
+          </li>
+        </li>
+
+
+
+      </ul>
+    </div>
+
+
+
+  </section>
+
+
 
 </body>
 </html>
