apply required changes according to first code review

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
     <div class="main">
       <div class="primary-text-container">
-        <h1 class="primary-text">I'm Juan Diaz Glad to see you!</h1>
+        <h2 class="primary-text">I'm Juan Diaz Glad to see you!</h2>
       </div>
       <div class="secondary-text">
         <p>I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
       </div>
-      <div class="connect-text">LET'S CONNECT</div>
+      <h3 class="connect-text">LET'S CONNECT</h3>
       <div class="socialmedia-icons">
         <ul>
           <li class="twitter-icon"><a href=""></a></li>
@@ -145,18 +145,18 @@
           <li class="lang">javaScript</li>
         </ul>
       </div>
-      <div class="project-access">See project</div>
+      <button class="project-access">See project</button>
     </div>  
   </section>
 
   <section class="about-me">
     <div class="primary-text-container">
-      <h1 class="primary-text">About<br>Myself</h1>
+      <h2 class="primary-text">About<br>Myself</h2>
     </div>
     <div class="secondary-text">
       <p>I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
     </div>
-    <div class="connect-text">LET'S CONNECT</div>
+    <h3 class="connect-text">LET'S CONNECT</h3>
     <div class="socialmedia-icons">
       <ul>
         <li class="twitter-icon"><a href=""></a></li>
@@ -166,7 +166,7 @@
         <li class="fingers-icon"><a href=""></a></li>
       </ul>
     </div>
-    <div class="resume-access">Get my Resume</div>
+    <button class="resume-access">Get my Resume</button>
     <div>
       <ul class="categories-info">
         <li class="categorie" id="cat1">
