add contactme section

--- a/index.html
+++ b/index.html
@@ -213,12 +213,9 @@
           </li>
       </ul>
     </div>
-
-
+  </section>
+  <section class="contactme">
 
   </section>
-
-
-
 </body>
 </html>
