--- a/index.html
+++ b/index.html
@@ -221,6 +221,23 @@
     <div class="contactme-intro">
       <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
     </div>
+    <form class="contactme-form">
+      <ul class="form-elements-list">
+        <li>
+          <input class="input-name" type="text" id="user-name" placeholder="Your name" maxlength="30" required>
+        </li>
+        <li>
+          <input class="input-email" type="email" id="user-email" required placeholder="your@email">
+        </li>
+        <li>
+          <textarea class="input-textarea" required maxlength="500" placeholder="Write your message here"></textarea>
+        </li>
+        <li>
+          <button class="submit-button" name="submit">Get in touch</button>
+        </li>
+      </ul>
+    </form>
+
   </section>
 </body>
 </html>
