--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <div class="contactme-intro">
       <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
     </div>
-    <form class="contactme-form">
+    <form class="contactme-form" action="https://formspree.io/f/mpzbgqyj" method="post">
       <ul class="form-elements-list">
         <li>
           <input class="input-name" type="text" id="user-name" placeholder="Your name" maxlength="30" required>
