add title and intro to contactme section

--- a/index.html
+++ b/index.html
@@ -215,7 +215,12 @@
     </div>
   </section>
   <section class="contactme">
-
+    <div class="contactme-title">
+      <h2>Contact me</h2>
+    </div>
+    <div class="contactme-intro">
+      <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
+    </div>
   </section>
 </body>
 </html>
