--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <header>
       <nav class="navbar">
         <a class="my-logo">My Logo</a>
+        <ul class="navlist">
+        <a class="navlink" href="#portfolio">Portfolio</a>
+        <a class="navlink" href="#about">About</a>
+        <a class="navlink" href="#contactme">Contact</a>
         <a class="menu-icon"></a>
+        </ul>
       </nav>
     </header>
 
@@ -39,7 +44,7 @@
     </div>
   </section>
 
-  <section class="projects">
+  <section class="projects" id="portfolio">
     <div class="project" id="project1">
       <div class="pimage"></div>
       <div class="p-title">
@@ -149,7 +154,7 @@
     </div>  
   </section>
 
-  <section class="about-me">
+  <section class="about-me" id="about">
     <div class="primary-text-container">
       <h2 class="primary-text">About<br>Myself</h2>
     </div>
@@ -214,7 +219,7 @@
       </ul>
     </div>
   </section>
-  <section class="contactme">
+  <section class="contactme" id="contactme">
     <div class="contactme-title">
       <h2>Contact me</h2>
     </div>
