--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <header>
       <nav class="navbar">
         <a class="my-logo">My Logo</a>
-        <ul class="navlist">
+        <div class="navlist">
         <a class="navlink" href="#portfolio">Portfolio</a>
         <a class="navlink" href="#about">About</a>
         <a class="navlink" href="#contactme">Contact</a>
         <a class="menu-icon"></a>
-        </ul>
+        </div>
       </nav>
     </header>
 
@@ -184,26 +184,26 @@
             </div>
             <div class="arrow-img"></div>
           </li>
-          <ul class="subcategories-info">
-            <li class="subcategorie" id="subcat1">
+          <div class="subcategories-info">
+            <div class="subcategorie" id="subcat1">
               <div class="subcat-logo"></div>
               <div class="subcategorie-name">
                 <h4>JavaScript</h4>
               </div>
-            </li>
-            <li class="subcategorie" id="subcat2">
+            </div>
+            <div class="subcategorie" id="subcat2">
               <div class="subcat-logo"></div>
               <div class="subcategorie-name">
                 <h4>HTML</h4>
               </div>
-            </li>
-            <li class="subcategorie" id="subcat3">
+            </div>
+            <div class="subcategorie" id="subcat3">
               <div class="subcat-logo"></div>
               <div class="subcategorie-name">
                 <h4>CSS</h4>
               </div>
-            </li>
-          </ul>
+            </div>
+          </div>
           <li class="categorie" id="cat2">
             <div class="categorie-name">
               <h4>Frameworks</h4>
