modify sections for desktop responsiveness

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </div>
             <div class="arrow-img"></div>
           </li>
-          <div class="subcategories-info">
+          <li class="subcategories-info">
             <div class="subcategorie" id="subcat1">
               <div class="subcat-logo"></div>
               <div class="subcategorie-name">
@@ -203,7 +203,7 @@
                 <h4>CSS</h4>
               </div>
             </div>
-          </div>
+          </li>
           <li class="categorie" id="cat2">
             <div class="categorie-name">
               <h4>Frameworks</h4>
