modify sections for desktop responsiveness

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <section class="intro">
     <header>
       <nav class="navbar">
-        <a class="my-logo">My Logo</a>
+        <a class="my-logo" href="#">My Logo</a>
         <div class="navlist">
         <a class="navlink" href="#portfolio">Portfolio</a>
         <a class="navlink" href="#about">About</a>
         <a class="navlink" href="#contactme">Contact</a>
-        <a class="menu-icon"></a>
+        <a class="menu-icon" href="#"></a>
         </div>
       </nav>
     </header>
@@ -180,7 +180,7 @@
         <ul class="categories-info">
           <li class="categorie" id="cat1">
             <div class="categorie-name">
-              <h4>Languajes</h4>
+              <h4>Languages</h4>
             </div>
             <div class="arrow-img"></div>
           </li>
