Edit social links

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Juan Diaz Portfolio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles.css">
+  <title>Juan Diaz Portfolio</title>
 </head>
 
 <body class="body">
@@ -15,10 +16,10 @@
       <nav class="navbar">
         <a class="my-logo" href="#">My Logo</a>
         <div class="navlist">
-        <a class="navlink" href="#portfolio">Portfolio</a>
-        <a class="navlink" href="#about">About</a>
-        <a class="navlink" href="#contactme">Contact</a>
-        <a class="menu-icon" href="#"></a>
+          <a class="navlink" href="#portfolio">Portfolio</a>
+          <a class="navlink" href="#about">About</a>
+          <a class="navlink" href="#contactme">Contact</a>
+          <a class="menu-icon" href="#"></a>
         </div>
       </nav>
     </header>
@@ -29,7 +30,9 @@
           <h2 class="primary-text">I'm Juan Diaz Glad to see you!</h2>
         </div>
         <div class="secondary-text">
-          <p>I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+          <p>I'm a software developer! I can help you build a product , feature or website Look through some of my work
+            and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+          </p>
         </div>
         <h3 class="connect-text">LET'S CONNECT</h3>
         <div class="socialmedia-icons">
@@ -80,7 +83,7 @@
           <h2>Tonic</h2>
         </div>
         <ul class="details-list">
-          <li class="client">CANOPY</li>  
+          <li class="client">CANOPY</li>
           <li class="spacedot"></li>
           <li class="role">Back End Dev</li>
           <li class="spacedot"></li>
@@ -162,16 +165,18 @@
           <h2 class="primary-text">About<br>Myself</h2>
         </div>
         <div class="secondary-text">
-          <p>I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+          <p>I'm a software developer! I can help you build a product , feature or website Look through some of my work
+            and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+          </p>
         </div>
         <h3 class="connect-text">LET'S CONNECT</h3>
         <div class="socialmedia-icons">
           <ul>
-            <li class="twitter-icon"><a href=""></a></li>
-            <li class="linkedin-icon"><a href=""></a></li>
-            <li class="m-icon"><a href=""></a></li> 
-            <li class="cat-icon"><a href=""></a></li>
-            <li class="fingers-icon"><a href=""></a></li>
+            <li class="twitter-icon"><a href="#"></a></li>
+            <li class="linkedin-icon"><a href="#"></a></li>
+            <li class="m-icon"><a href="#"></a></li>
+            <li class="cat-icon"><a href="#"></a></li>
+            <li class="fingers-icon"><a href="#"></a></li>
           </ul>
         </div>
         <button class="resume-access">Get my Resume</button>
@@ -210,18 +215,18 @@
             </div>
             <div class="arrow-img"></div>
           </li>
-            <li class="separator-line">
-              <div class="line"></div>
-            </li>
-            <li class="categorie" id="cat3">
-              <div class="categorie-name">
-                <h4>Skills</h4>
-              </div>
-              <div class="arrow-img"></div>
-            </li>
-            <li class="separator-line">
-              <div class="line"></div>
-            </li>
+          <li class="separator-line">
+            <div class="line"></div>
+          </li>
+          <li class="categorie" id="cat3">
+            <div class="categorie-name">
+              <h4>Skills</h4>
+            </div>
+            <div class="arrow-img"></div>
+          </li>
+          <li class="separator-line">
+            <div class="line"></div>
+          </li>
         </ul>
       </div>
     </div>
@@ -231,7 +236,8 @@
       <h2>Contact me</h2>
     </div>
     <div class="contactme-intro">
-      <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
+      <p>If you have an application you are interested in developing, a feature that you need built or a project that
+        needs coding. I’d love to help with it </p>
     </div>
     <form class="contactme-form" action="https://formspree.io/f/mpzbgqyj" method="post">
       <ul class="form-elements-list">
@@ -252,4 +258,5 @@
 
   </section>
 </body>
+
 </html>
