update social media icons links

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <h3 class="connect-text">LET'S CONNECT</h3>
         <div class="socialmedia-icons">
           <ul>
-            <li class="twitter-icon"><a href="#"></a></li>
-            <li class="linkedin-icon"><a href="#"></a></li>
-            <li class="m-icon"><a href="#"></a></li>
-            <li class="cat-icon"><a href="#"></a></li>
-            <li class="fingers-icon"><a href="#"></a></li>
+            <li class="twitter-icon"><a href="#"><img src="../images/twitter-icon.png" alt="twitter-icon" width="20" height="20"></a></li>
+            <li class="linkedin-icon"><a href="#"><img src="../images/linkedin-icon.png" alt="linkedin-icon" width="20" height="20"></a></li>
+            <li class="m-icon"><a href="#"><img src="../images/m-icon.png" alt="m-icon" width="20" height="20"></a></li>
+            <li class="cat-icon"><a href="#"><img src="../images/cat-icon.png" alt="cat-icon" width="20" height="20"></a></li>
+            <li class="fingers-icon"><a href="#"><img src="../images/fingers-icon.png" alt="fingers-icon" width="20" height="20"></a></li>
           </ul>
         </div>
       </div>
@@ -172,11 +172,11 @@
         <h3 class="connect-text">LET'S CONNECT</h3>
         <div class="socialmedia-icons">
           <ul>
-            <li class="twitter-icon"><a href="#"></a></li>
-            <li class="linkedin-icon"><a href="#"></a></li>
-            <li class="m-icon"><a href="#"></a></li>
-            <li class="cat-icon"><a href="#"></a></li>
-            <li class="fingers-icon"><a href="#"></a></li>
+            <li class="twitter-icon"><a href="#"><img src="../images/twitter-icon.png" alt="twitter-icon" width="20" height="20"></a></li>
+            <li class="linkedin-icon"><a href="#"><img src="../images/linkedin-icon.png" alt="linkedin-icon" width="20" height="20"></a></li>
+            <li class="m-icon"><a href="#"><img src="../images/m-icon.png" alt="m-icon" width="20" height="20"></a></li>
+            <li class="cat-icon"><a href="#"><img src="../images/cat-icon.png" alt="cat-icon" width="20" height="20"></a></li>
+            <li class="fingers-icon"><a href="#"><img src="../images/fingers-icon.png" alt="fingers-icon" width="20" height="20"></a></li>
           </ul>
         </div>
         <button class="resume-access">Get my Resume</button>
