--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="intro">
     <header>
       <nav class="navbar">
-        <a class="my-logo" href="#xxx">My Logo</a>
+        <a class="my-logo" href="#portfolio">My Logo</a>
         <div class="navlist">
           <a class="navlink" href="#portfolio">Portfolio</a>
           <a class="navlink" href="#about">About</a>
