--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a class="navlink" href="#portfolio">Portfolio</a>
           <a class="navlink" href="#about">About</a>
           <a class="navlink" href="#contactme">Contact</a>
-          <a class="menu-icon" href="#menu-icon">sss</a>
+          <a class="menu-icon" href="#menu-icon"></a>
         </div>
       </nav>
     </header>
