update main heading hierarchy

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <section class="intro">
     <header>
       <nav class="navbar">
-        <a class="my-logo" href="#portfolio">My Logo</a>
+        <a class="my-logo" href="#">My Logo</a>
         <div class="navlist">
           <a class="navlink" href="#portfolio">Portfolio</a>
           <a class="navlink" href="#about">About</a>
           <a class="navlink" href="#contactme">Contact</a>
-          <a class="menu-icon" href="#menu-icon"></a>
+          <a class="menu-icon" href="#"></a>
         </div>
       </nav>
     </header>
@@ -27,7 +27,7 @@
     <div class="main">
       <div class="main-content">
         <div class="primary-text-container">
-          <h2 class="primary-text">I'm Juan Diaz Glad to see you!</h2>
+          <h1 class="primary-text">I'm Juan Diaz Glad to see you!</h1>
         </div>
         <div class="secondary-text">
           <p>I'm a software developer! I can help you build a product , feature or website Look through some of my work
