--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 
   <section class="intro">
     <header>
+      <div class="mobile-menu text-decoration-none">
+        
+          <a class="m-navlink close-bttn text-decoration-none" href="#">X</a>
+          <a class="m-navlink text-decoration-none" href="#portfolio">Portfolio</a>
+          <a class="m-navlink" href="#about">About</a>
+          <a class="m-navlink" href="#contactme">Contact</a>
+        
+      </div>
       <nav class="navbar">
         <a class="my-logo" href="#">My Logo</a>
         <div class="navlist">
