update mobile menu layout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <section class="intro">
     <header>
-      <div class="mobile-menu text-decoration-none">
+      <div class="mobile-menu">
         
           <a class="m-navlink close-bttn text-decoration-none" href="#">X</a>
           <a class="m-navlink text-decoration-none" href="#portfolio">Portfolio</a>
