add js query code

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
   <section class="intro">
     <header>
-      <div class="mobile-menu">
+      <div id="mobile-menu" class="mobile-menu">
         
-          <a class="m-navlink close-bttn text-decoration-none" href="#">X</a>
+          <a class="m-navlink close-btn text-decoration-none" href="#">X</a>
           <a class="m-navlink text-decoration-none" href="#portfolio">Portfolio</a>
           <a class="m-navlink" href="#about">About</a>
           <a class="m-navlink" href="#contactme">Contact</a>
@@ -27,7 +27,7 @@
           <a class="navlink" href="#portfolio">Portfolio</a>
           <a class="navlink" href="#about">About</a>
           <a class="navlink" href="#contactme">Contact</a>
-          <a class="menu-icon" href="#"></a>
+          <a id="hamburguer-btn" class="menu-icon" href="#"></a>
         </div>
       </nav>
     </header>
@@ -267,5 +267,5 @@
 
   </section>
 </body>
-
+<script src="js/index.js"></script>
 </html>
