make elements look blurry behind mobile menu

--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
   <title>Juan Diaz Portfolio</title>
 </head>
 
-<body class="body">
 
-  <section class="intro">
+
+<body class="body">
+  <div id="mobile-menu" class="mobile-menu">
+    <a class="m-navlink close-btn text-decoration-none" href="#">X</a>
+    <a class="m-navlink text-decoration-none" href="#portfolio">Portfolio</a>
+    <a class="m-navlink" href="#about">About</a>
+    <a class="m-navlink" href="#contactme">Contact</a>
+  </div>
+  <section id="intro" class="intro section">
     <header>
-      <div id="mobile-menu" class="mobile-menu">
-        
-          <a class="m-navlink close-btn text-decoration-none" href="#">X</a>
-          <a class="m-navlink text-decoration-none" href="#portfolio">Portfolio</a>
-          <a class="m-navlink" href="#about">About</a>
-          <a class="m-navlink" href="#contactme">Contact</a>
-        
-      </div>
       <nav class="navbar">
         <a class="my-logo" href="#">My Logo</a>
         <div class="navlist">
@@ -56,7 +55,7 @@
     </div>
   </section>
 
-  <section class="projects" id="portfolio">
+  <section class="projects section" id="portfolio">
     <div class="project" id="project1">
       <div class="pimage"></div>
       <div class="projectdetails">
@@ -166,7 +165,7 @@
     </div>
   </section>
 
-  <section class="about-me" id="about">
+  <section class="about-me section" id="about">
     <div class="about-me-content">
       <div class="about-intro">
         <div class="primary-text-container">
@@ -239,7 +238,7 @@
       </div>
     </div>
   </section>
-  <section class="contactme" id="contactme">
+  <section class="contactme section" id="contactme">
     <div class="contactme-title">
       <h2>Contact me</h2>
     </div>
