review on mobile menu without found issues

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 
 <body class="body">
+  <!-- <div class="site-wrapper"> -->
   <div id="mobile-menu" class="mobile-menu">
     <a class="m-navlink close-btn text-decoration-none" href="#">X</a>
     <a class="m-navlink text-decoration-none" href="#portfolio">Portfolio</a>
@@ -266,5 +267,6 @@
 
   </section>
   <script src="js/index.js"></script>
+<!-- </div> -->
 </body>
 </html>
