create java store aray and scrip to update data

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="pimage"></div>
       <div class="projectdetails">
         <div class="p-title">
-          <h2>Tonic</h2>
+          <h2 id="p1-title">xxxxx</h2>
         </div>
         <ul class="details-list">
           <li class="client">CANOPY</li>
