--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 </head>
 
 
-
 <body class="body">
   <div id="mobile-menu" class="mobile-menu">
-    <a class="m-navlink close-btn text-decoration-none" href="#">X</a>
+    <a class="m-navlink close-btn" href="#">X</a>
     <a class="m-navlink text-decoration-none" href="#portfolio">Portfolio</a>
     <a class="m-navlink" href="#about">About</a>
     <a class="m-navlink" href="#contactme">Contact</a>
@@ -56,10 +55,7 @@
   </section>
 
   <section class="projects section" id="portfolio">
-    
 
-
-  
   </section>
 
   <section class="about-me section" id="about">
@@ -83,7 +79,7 @@
             <li class="fingers-icon"><a href="#"><img src="../images/fingers-icon.png" alt="fingers-icon" width="20" height="20"></a></li>
           </ul>
         </div>
-        <button class="resume-access">Get my Resume</button>
+        <button class="resume-access btn">Get my Resume</button>
       </div>
       <div class="about-details">
         <ul class="categories-info">
