--- a/index.html
+++ b/index.html
@@ -139,13 +139,14 @@
       <p>If you have an application you are interested in developing, a feature that you need built or a project that
         needs coding. I’d love to help with it </p>
     </div>
-    <form class="contactme-form" action="https://formspree.io/f/mpzbgqyj" method="post">
+    <form id="contactme-form" class="contactme-form" action="https://formspree.io/f/mpzbgqyj" method="post">
       <ul class="form-elements-list">
         <li>
           <input class="input-name" type="text" id="user-name" placeholder="Your name" maxlength="30" required>
         </li>
         <li>
-          <input class="input-email" type="email" id="user-email" required placeholder="your@email">
+          <input name="user-email" class="input-email" type="email" id="user-email" required placeholder="your@email">
+          <small></small>
         </li>
         <li>
           <textarea class="input-textarea" id="user-message" required maxlength="500"
@@ -159,5 +160,6 @@
 
   </section>
   <script src="js/index.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
