edit buuton type to submit

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <p>If you have an application you are interested in developing, a feature that you need built or a project that
         needs coding. I’d love to help with it </p>
     </div>
-    <form id="contactme-form" class="contactme-form" action="https://formspree.io/f/mpzbgqyj" method="post">
+    <form id="contactme-form" class="contactme-form" action="https://formspree.io/f/mpzbgqyj" method="POST">
       <ul class="form-elements-list">
         <li>
           <input class="input-name" type="text" id="user-name" placeholder="Your name" maxlength="30" required>
@@ -153,7 +153,7 @@
         </li>
         <li>
           <small></small>
-          <button class="submit-button" name="submit">Get in touch</button>
+          <button class="submit-button" name="submit" type="submit">Get in touch</button>
         </li>
       </ul>
     </form>
