--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </li>
         <li>
           <small></small>
-          <button class="submit-button" name="submit" type="submit">Get in touch</button>
+          <button class="submit-button" name="submit-btn" type="submit">Get in touch</button>
         </li>
       </ul>
     </form>
